[tool.poetry]
name = "latexutils"
version = "0.1.0"
description = "Utility scripts that makes working with LaTeX easier!"
authors = ["Kristoffer Plagborg Bak Sørensen <kristoffer.pbs@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
Pygments = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
